--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "test": "mocha --require test/setup.js",
     "testing": "npm run test -- --watch",
     "dev": "nodemon src/server.js",
+    "migrate": "postgrator --config postgrator-config.js",
+    "migrate:test": "env NODE_ENV=test npm run migrate",
+    "migrate:production": "env SSL=true DATABASE_URL=$(heroku config:get DATABASE_URL) npm run migrate",
     "start": "node src/server.js",
     "predeploy": "npm audit",
     "deploy": "git push heroku master"
@@ -19,12 +22,14 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^3.21.2",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "pg": "^7.18.2"
   },
   "devDependencies": {
     "chai": "^4.2.0",
     "mocha": "^7.0.0",
     "nodemon": "^2.0.2",
+    "postgrator-cli": "^3.3.0",
     "supertest": "^4.0.2"
   }
 }
