--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^3.21.2",
+    "knex": "^0.20.10",
     "morgan": "^1.9.1",
     "pg": "^7.18.2"
   },
